scrollbars fix for menu

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,10 +7,6 @@
 	border: none;
 }
 
-.site-footer {
-	border: none;
-}
-
 body {
 	overflow: scroll;
 	/* always-on scrollbars so menu won't jump*/
