--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,10 +8,6 @@
 	border: none;
 }
 
-.site-footer {
-	border: none;
-}
-
 body {
 	overflow: scroll;
 	/* always-on scrollbars so menu won't jump*/
